adding box to desktop

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HMIBIO</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Materialize+Icons">
     <link rel="stylesheet" href="assets/lib/materialize/css/materialize.min.css" />
     <link rel="stylesheet" href="css/index.css">
+
 
 </head>
 
@@ -38,13 +40,14 @@
                 </a>
             </div>
         </div>
-        <hr />
+        <hr class="hide-on-large-screen hide" />
         <div class="landing-nav">
             <div class="landing-nav-subcontainer">
+                <a href="index.html">home</a>
                 <a href="#" title="mizik ki soti nan denye mwa yo">new</a>
                 <a href="buymusic.html" title="itunes , amazon , google mizik">buy it now</a>
                 <a href="gallery.html" title="tcket , kompaevents , wiki mizik">gallery</a>
-                <a href="#">info</a>
+                <a href="blog.html">blog</a>
                 <a href="login.html">login</a>
                 <a href="support.html">donate</a>
                 <div class="landing">
@@ -106,15 +109,9 @@
         THE INFORMATION OF THE PERSON REQUESTED. BECAUSE THERE WILL BE RANDOM
         SECTION WITH ARTIST , OF THE MOMENT, PERSON OF THE MOMENT IT SHOULD BE
         RELATED TO MUSIC. AND ALSO A MUSIC/ARTIST/ALBUM/ OF THE MOMENT ,
-        LINK ON SHOW OF THE MOMENT
-        -->
-        <!-- 
-            <section class="main-main">
+        LINK ON SHOW OF THE MOMENT 
+       -->
 
-            
-
-            I want to put a section, where people can go to see  -->
-        
         <div class="container">
             <div class="row">
                 <div class="col s12 m4">
@@ -173,76 +170,74 @@
                 </div>
             </div>
         </div>
-            <div class="container">
-                <div class="section">
+        <div class="container">
+            <div class="section">
+                <!-- Icon Section  -->
+                <div class="row">
+                    <div class="col s12 m4">
+                        <div class="icon-block">
+                            <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+                            <h5 class="center">Speeds up development</h5>
 
-                    <!-- Icon Section  -->
-                    <div class="row">
-                        <div class="col s12 m4">
-                            <div class="icon-block">
-                                <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
-                                <h5 class="center">Speeds up development</h5>
-
-                                <p class="light">We did most of the heavy lifting for you to provide a default stylings
-                                    that
-                                    incorporate our custom components. Additionally, we refined animations and
-                                    transitions
-                                    to provide a smoother experience for developers.</p>
-                            </div>
-                        </div>
-
-                        <div class="col s12 m4">
-                            <div class="icon-block">
-                                <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
-                                <h5 class="center">User Experience Focused</h5>
-
-                                <p class="light">By utilizing elements and principles of Material Design, we were able
-                                    to
-                                    create a framework that incorporates components and animations that provide more
-                                    feedback to users. Additionally, a single underlying responsive system across all
-                                    platforms allow for a more unified user experience.</p>
-                            </div>
-                        </div>
-
-                        <div class="col s12 m4">
-                            <div class="icon-block">
-                                <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
-                                <h5 class="center">Easy to work with</h5>
-
-                                <p class="light">We have provided detailed documentation as well as specific code
-                                    examples
-                                    to help new users get started. We are also always open to feedback and can answer
-                                    any
-                                    questions a user may have about Materialize.</p>
-                            </div>
+                            <p class="light">We did most of the heavy lifting for you to provide a default stylings
+                                that
+                                incorporate our custom components. Additionally, we refined animations and
+                                transitions
+                                to provide a smoother experience for developers.</p>
                         </div>
                     </div>
 
+                    <div class="col s12 m4">
+                        <div class="icon-block">
+                            <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+                            <h5 class="center">User Experience Focused</h5>
+
+                            <p class="light">By utilizing elements and principles of Material Design, we were able
+                                to
+                                create a framework that incorporates components and animations that provide more
+                                feedback to users. Additionally, a single underlying responsive system across all
+                                platforms allow for a more unified user experience.</p>
+                        </div>
+                    </div>
+
+                    <div class="col s12 m4">
+                        <div class="icon-block">
+                            <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+                            <h5 class="center">Easy to work with</h5>
+
+                            <p class="light">We have provided detailed documentation as well as specific code
+                                examples
+                                to help new users get started. We are also always open to feedback and can answer
+                                any
+                                questions a user may have about Materialize.</p>
+                        </div>
+                    </div>
                 </div>
-                <br><br>
+
             </div>
-            <div class="container black red-text">
-                <div class="row black red-text">
-                    <div class="col s12 m6">
-                        <div class="card black">
-                            <div class="card-content white-text">
-                                <span class="card-title">
-                                    harmonik received best album prize
-                                </span>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                    Esse illo sapiente asperiores voluptatum repellat iusto quia excepturi,
-                                    sit quis mollitia fugiat iure autem perspiciatis enim beatae odio aliquid odit!
-                                </p>
-                            </div>
-                            <div class="card-action">
-                                <a href="#">read more</a>
-                                <a href="#">other resources</a>
-                            </div>
+            <br><br>
+        </div>
+        <div class="container black red-text">
+            <div class="row black red-text">
+                <div class="col s12 m6">
+                    <div class="card black">
+                        <div class="card-content white-text">
+                            <span class="card-title">
+                                harmonik received best album prize
+                            </span>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                Esse illo sapiente asperiores voluptatum repellat iusto quia excepturi,
+                                sit quis mollitia fugiat iure autem perspiciatis enim beatae odio aliquid odit!
+                            </p>
+                        </div>
+                        <div class="card-action">
+                            <a href="#">read more</a>
+                            <a href="#">other resources</a>
                         </div>
                     </div>
                 </div>
             </div>
-
+        </div>
         </div>
         <div class="container black red-text">
             <div class="row black red-text" title="this box is when there's a new track in the hmi">
@@ -310,32 +305,72 @@
                 </div>
             </div>
         </div>
+        </section>
+        <section id="minimize">
+            <!-- work with boxes-->
+            <div class="box-container">
+                <div class="box one">
+                    <h3> ARTIST </h3>
+                    <ul>
+                        <li><a href="">Keyboardist</a></li>
+                        <li><a href="">Guitarist</a></li>
+                        <li><a href="">Batè</a></li>
+                        <li><a href="">Saxophonist</a></li>
+                        <li><a href="">Tambou</a></li>
+                    </ul>
+                </div>
 
+                <div class="box two">
+                    <h3>Icon/Legend</h3>
+                    <ul>
+                        <li><a href="">old band </a> </li>
+                        <li><a href="">solo singer</a></li>
+                        <li><a href="">bolewo</a></li>
+                        <li><a href="">MIZIK KLASIK</a> </li>
+                    </ul>
+                </div>
 
+                <div class="box three">
+                    <h3> SWIV NOU - SIPOTE N </h3>
+                    <ul>
+                        <li><a href="">Old Band</a></li>
+                        <li><a href="">Animatè</a></li>
+                        <li><a href="">Female Singer</a></li>
+                        <li><a href="">website reference</a></li>
+                    </ul>
+                </div>
+            </div><!-- ens of the first-box-->
+            <div class="box-container">
+                <div class="box one">
+                    <h3> FENK TONBE OUBYEN NOUVOTE </h3>
+                    <ul>
+                        <li><a href="">Yayad ak Gouyad</a></li>
+                        <li><a href="#">CHECHE KONNEN</a></li>
+                        <li><a href="">ENTENASYONAL</a></li>
+                        <li><a href="">BANN SIPO</a></li>
+                    </ul>
+                </div>
 
+                <div class="box two">
+                    <h3> MIZIK KI SOU MACHE A </h3>
+                    <ul>
+                        <li><a href="">KOMPA </a> </li>
+                        <li><a href="">RAP KREYOL</a></li>
+                        <li><a href="">TWOUBADOU</a></li>
+                        <li><a href="">MIZIK KLASIK</a> </li>
+                    </ul>
+                </div>
 
-        <!-- <aside class="side-menu side-bar">
-            <ul>
-                <li><a href="">Keyboardist|Pianist</a></li>
-                <li><a href="">Guitarist</a></li>
-                <li><a href="">Batè</a></li>
-                <li><a href="">Instriman A Van</a></li>
-                <li><a href="">Old Band</a></li>
-                <li><a href="">Animatè</a></li>
-                <li><a href="">Female Singer</a></li>
-                <li><a href="">website reference</a></li>
-                <li><a href="">Animatè</a></li>
-                <li><a href="">Animatè</a></li>
-                <li><a href="">Animatè</a></li>
-                <li><a href="">Animatè</a></li>
-                <li><a href="" title="kek ti mizik damou 2000 konpa raga rap">Ti Mizik Alepòk</a></li>
-                <li><a href="">Atis Moman</a></li>
-                <li><a href="">Mizik Moman</a></li>
-                <li><a href="">Maestro yo</a></li>
-                <li><a href="">Yayad ak Gouyad</a></li>
-            </ul>
-        </aside> -->
-
+                <div class="box three">
+                    <h3> SWIV NOU - SIPOTE N </h3>
+                    <ul>
+                        <li><a href="">FACEBOOK</a></li>
+                        <li><a href="">YOUTUBE</a></li>
+                        <li><a href="">INSTAGRAM</a></li>
+                        <li><a href="">TWITTER</a></li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </main>
     <footer class="page-footer black">
