--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login Form </title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Materialize+Icons">
     <link rel="stylesheet" href="css/login.css">
 </head>
 
@@ -33,13 +34,16 @@
             <a href="http://www.instagram.com/hmibio">
                 <img src="img/icon/info-blog.png" alt="">
             </a>
-            
+
         </div>
         <nav>
-            <a href="#">brand new</a>
-            <a href="#">email/info</a>
-            <a href="#">buy it now</a>
+            <a href="index.html">home</a>
+            <a href="#" title="mizik ki soti nan denye mwa yo">new</a>
+            <a href="buymusic.html" title="itunes , amazon , google mizik">buy it now</a>
+            <a href="gallery.html" title="tcket , kompaevents , wiki mizik">gallery</a>
+            <a href="blog.html">blog</a>
             <a href="login.html">login</a>
+            <a href="support.html">donate</a>
             <div class="hide-for-mobile">
                 Haitian Music Biography
             </div>
