--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HMIBIO</title>
+    <meta name="description" content="haitan music industry biology and biograpy, get info artist">
+    <meta name="author" content="duperweb">
+    <meta name="keywords" content="hmi, haitian music industry, biography, haitan music history, artist ">
+    <title>HMIBIO: Haitian Media Industry Biology</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Materialize+Icons">
-    <link rel="stylesheet" href="assets/lib/materialize/css/materialize.min.css" />
+    <link rel="stylesheet" href="assets/lib/materialize/css/materialize-min.css" />
     <link rel="stylesheet" href="css/index.css">
 
 
@@ -17,6 +20,15 @@
     <header class="header-page">
         <div class="social-contact">
             <div class="">
+                <span class="open-slide">
+                    <a onclick="openSlideMenu()">
+                        <svg width="30" height="30">
+                            <path d="M0,5 30,5" stroke="#fff" stroke-width="5" />
+                            <path d="M0,14 30,14" stroke="#fff" stroke-width="5" />
+                            <path d="M0,23 30,23" stroke="#fff" stroke-width="5" />
+                        </svg>
+                    </a>
+                </span>
                 <a href="http://www.youtube.com/hmibio">
                     <img src="img/social/youtube.png" alt="">
                 </a>
@@ -29,18 +41,15 @@
                 <a href="http://www.twitter.com/hmibio">
                     <img src="img/social/twitter-icon.png" alt="">
                 </a>
-                <a href="http://www.facebook.com/hmibio">
-                    <img src="img/icon/add-user.png" alt="">
+                <a href="login.html">
+                    <img src="img/add-user.png" alt="">
                 </a>
                 <a href="http://www.twitter.com/hmibio">
                     <img src="img/icon/music.png" alt="">
                 </a>
-                <a href="http://www.instagram.com/hmibio">
-                    <img src="img/icon/info-blog.png" alt="">
-                </a>
             </div>
         </div>
-        <hr class="hide-on-large-screen hide" />
+        <hr class="hide-on-large-only" />
         <div class="landing-nav">
             <div class="landing-nav-subcontainer">
                 <a href="index.html">home</a>
@@ -48,10 +57,9 @@
                 <a href="buymusic.html" title="itunes , amazon , google mizik">buy it now</a>
                 <a href="gallery.html" title="tcket , kompaevents , wiki mizik">gallery</a>
                 <a href="blog.html">blog</a>
-                <a href="login.html">login</a>
                 <a href="support.html">donate</a>
                 <div class="landing">
-                    Haitian Music Industry Biology
+                    Haitian Media Industry Biology
                 </div>
             </div>
         </div>
@@ -243,7 +251,7 @@
             <div class="row black red-text" title="this box is when there's a new track in the hmi">
                 <ul class="collection with-header black">
                     <li class="collection-header">
-                        <h3 class="center">new single/track</h3>
+                        <h3 class="center">new track released</h3>
                     </li>
                     <li class="collection-item avatar">
                         <img src="img/gallery/alan_cave.jpg" alt="alan cave" class="circle">
@@ -306,72 +314,32 @@
             </div>
         </div>
         </section>
-        <section id="minimize">
-            <!-- work with boxes-->
-            <div class="box-container">
-                <div class="box one">
-                    <h3> ARTIST </h3>
-                    <ul>
-                        <li><a href="">Keyboardist</a></li>
-                        <li><a href="">Guitarist</a></li>
-                        <li><a href="">Batè</a></li>
-                        <li><a href="">Saxophonist</a></li>
-                        <li><a href="">Tambou</a></li>
-                    </ul>
-                </div>
-
-                <div class="box two">
-                    <h3>Icon/Legend</h3>
-                    <ul>
-                        <li><a href="">old band </a> </li>
-                        <li><a href="">solo singer</a></li>
-                        <li><a href="">bolewo</a></li>
-                        <li><a href="">MIZIK KLASIK</a> </li>
-                    </ul>
-                </div>
-
-                <div class="box three">
-                    <h3> SWIV NOU - SIPOTE N </h3>
-                    <ul>
-                        <li><a href="">Old Band</a></li>
-                        <li><a href="">Animatè</a></li>
-                        <li><a href="">Female Singer</a></li>
-                        <li><a href="">website reference</a></li>
-                    </ul>
-                </div>
-            </div><!-- ens of the first-box-->
-            <div class="box-container">
-                <div class="box one">
-                    <h3> FENK TONBE OUBYEN NOUVOTE </h3>
-                    <ul>
-                        <li><a href="">Yayad ak Gouyad</a></li>
-                        <li><a href="#">CHECHE KONNEN</a></li>
-                        <li><a href="">ENTENASYONAL</a></li>
-                        <li><a href="">BANN SIPO</a></li>
-                    </ul>
-                </div>
-
-                <div class="box two">
-                    <h3> MIZIK KI SOU MACHE A </h3>
-                    <ul>
-                        <li><a href="">KOMPA </a> </li>
-                        <li><a href="">RAP KREYOL</a></li>
-                        <li><a href="">TWOUBADOU</a></li>
-                        <li><a href="">MIZIK KLASIK</a> </li>
-                    </ul>
-                </div>
-
-                <div class="box three">
-                    <h3> SWIV NOU - SIPOTE N </h3>
-                    <ul>
-                        <li><a href="">FACEBOOK</a></li>
-                        <li><a href="">YOUTUBE</a></li>
-                        <li><a href="">INSTAGRAM</a></li>
-                        <li><a href="">TWITTER</a></li>
-                    </ul>
-                </div>
+        <aside id="side-menu" class="side-nav">
+            <div>
+                <a href="#" class="btn-close" onclick="closeSlideMenu()" >
+                    <img src="img/icon/cancel_view.png" alt="" style="width: 48px">
+                </a>
+            
             </div>
-        </section>
+            <a href="">Keyboardist</a>
+            <a href="">Guitarist</a>
+            <a href="">Batè</a>
+            <a href="">Saxophonist</a>
+            <a href="">Tambourine</a>
+            <a href="">Comedien </a>
+            <a href="">Great Actor</a>
+            <a href="">bolewo</a>
+            <a href="">Animateur</a>
+            <a href="">Keyboardist</a>
+            <a href="">Guitarist</a>
+            <a href="">Batè</a>
+            <a href="">Saxophonist</a>
+            <a href="">Tambourine</a>
+            <a href="">Comedien </a>
+            <a href="">Great Actor</a>
+            <a href="">bolewo</a>
+            <a href="">Animateur</a>
+        </aside>
     </main>
     <footer class="page-footer black">
         <div class="footer-link">
