some minor changes

--- a/gallery.html
+++ b/gallery.html
@@ -20,41 +20,46 @@
 <body>
     <header class="header-page">
         <div class="social-contact">
-            <div class="">
-                <a href="http://www.youtube.com/hmibio">
-                    <img src="img/social/youtube.png" alt="">
+            <span class="open-slide hide-on-extra-large-only">
+                <a onclick="openSlideMenu()">
+                    <svg width="30" height="30">
+                        <path d="M0,5 30,5" stroke="#fff" stroke-width="5" />
+                        <path d="M0,14 30,14" stroke="#fff" stroke-width="5" />
+                        <path d="M0,23 30,23" stroke="#fff" stroke-width="5" />
+                    </svg>
                 </a>
-                <a href="http://www.instagram.com/hmibio">
-                    <img src="img/social/insta-icon.jpeg" alt="">
-                </a>
-                <a href="http://www.facebook.com/hmibio">
-                    <img src="img/social/fb.png" alt="">
-                </a>
-                <a href="http://www.twitter.com/hmibio">
-                    <img src="img/social/twitter-icon.png" alt="">
-                </a>
-                <a href="http://www.facebook.com/hmibio">
-                    <img src="img/icon/add-user.png" alt="">
-                </a>
-                <a href="http://www.twitter.com/hmibio">
-                    <img src="img/icon/music.png" alt="">
-                </a>
-                <a href="http://www.instagram.com/hmibio">
-                    <img src="img/icon/info-blog.png" alt="">
-                </a>
-            </div>
+            </span>
+            <a href="http://www.youtube.com/hmibio">
+                <img src="img/social/youtube.png" alt="">
+            </a>
+            <a href="http://www.instagram.com/hmibio">
+                <img src="img/social/insta-icon.jpeg" alt="">
+            </a>
+            <a href="http://www.facebook.com/hmibio">
+                <img src="img/social/fb.png" alt="">
+            </a>
+            <a href="http://www.twitter.com/hmibio">
+                <img src="img/social/twitter-icon.png" alt="">
+            </a>
+            <a href="login.html">
+                <img src="img/add-user.png" alt="">
+            </a>
+            <a href="http://www.twitter.com/hmibio">
+                <img src="img/icon/music.png" alt="">
+            </a>
         </div>
-        <hr class="hide-on-large-only"/>
+        </div>
+        <hr class="hide-on-large-only" />
         <div class="landing-nav">
             <div class="landing-nav-subcontainer">
-                <a href="#" title="mizik ki soti nan denye mwa yo">new</a>
-                <a href="buymusic.html" title="itunes , amazon , google mizik">buy it now</a>
+                <a href="index.html">home</a>
                 <a href="gallery.html" title="tcket , kompaevents , wiki mizik">gallery</a>
                 <a href="blog.html">blog</a>
-                <a href="login.html">login</a>
+                <a href="#" title="mizik ki soti nan denye mwa yo">new</a>
+                <a href="buymusic.html" title="itunes , amazon , google mizik">buy it now</a>
                 <a href="support.html">donate</a>
                 <div class="landing">
-                    Haitian Music Industry Biography
+                    Haitian Media Industry Biography
                 </div>
             </div>
         </div>
@@ -69,69 +74,114 @@
                 </form>
             </div>
         </nav>
-
     </header>
     <main style="background: #000">
-
-        <section>
+        <section class="mini-wrapper">
             <div class="container">
-                <h3>The Pionner...</h3>
                 <div class="row">
-                    <a href="" class="col s6">
-                        <span>nemour j. batist</span>
-                        <img src="img/gallery/pioneer/nemours.jpg" alt="nemours" />
-                    </a>
-                    <a href="" class="col s6">
-                        <span>ti manno</span>
-                        <img src="img/gallery/pioneer/ti_manno.jpg" alt="ti manno" />
-                    </a>
-                    <a href="" class="col s6">
-                            <span>robert martino</span>
-                            <img src="img/gallery/pioneer/robert_martino.jpeg" alt="robert_martino"/>
+                    <p>
+                        <a href="" class="col s3">
+                            <img src="img/gallery/pioneer/nemours.jpg" alt="">
                         </a>
-                    <a href="" class="col s6">
-                        <span>webert sicot</span>
-                        <img src="img/gallery/pioneer/webert_sicot.jpg" alt="webert sicot" />
-                    </a>
-                    <a href="" class="col s6">
-                        <span>coupe cloue</span>
-                        <img src="img/gallery/pioneer/coupe_cloue.jpg" alt="coupe_cloue" />
-                    </a>
+                        <a href="" class="col s3">
+                            <img src="img/gallery/pioneer/webert_sicot.jpg" alt="">
+                        </a>
+                        <a href="" class="col s3">
+                            <img src="img/gallery/pioneer/ti_manno.jpg" alt="">
+                        </a>
+                        <a href="" class="col s3">
+                            <img src="img/gallery/pioneer/coupe_cloue.jpg" alt="">
+                        </a>
+                    </p>
                 </div>
-            </div>
-            <div class="container">
-                <h3>Old Band Ever</h3>
                 <div class="row">
-                    <a href="" class="col s4"><span> Orchestre Septentrional</span><img src="img/gallery/pioneer/septan.jpg" alt="" class=""></a>
-                    <a href="" class="col s4"><span> Orchestre Tropicana</span><img src="img/gallery/pioneer/RGPOO-Tropicana-Posterfinal-CD2015.jpg" alt="" class=""><span></span></a>
-                    <a href="" class="col s4"><span>tabou combo</span><img src="img/gallery/pioneer/tabou_combo.jpg" alt=""class=""></a>
-                    <a href="" class="col s4"><span>phantom</span><img src="img/gallery/pioneer/phantoms.jpg" alt="" class=""></a>
-                    <a href="" class="col s4"><span>skah shah</span><img src="img/gallery/pioneer/skah_shah.jpg" alt="" class=""></a>
-                    <a href="" class="col s4"><span>magnum band</span><img src="img/gallery/pioneer/skah_shah_1.jpg" alt="" class=""></a>
-                    <a href="" class="col s4"><span>system band</span><img src="img/gallery/pioneer/system_band.jpg" alt="" class=""></a>
-                    <a href="" class="col s4"><span>bossa combo</span><img src="img/gallery/pioneer/bossa_combo.jpg" alt="" class=""></a>
-                    <a href="" class="col s4"><span>digital express</span><img src="img/gallery/pioneer/digital_express.jpg" alt="" class=""></a>
-                    <a href="" class="col s4"><span>koupe kloue</span><img src="img/gallery/pioneer/coupe.jpg" alt="" class=""></a>
-                   
-               </div>
+                    <p>
+                        <a href="" class="col s3">
+                            <img src="img/gallery/avatar/robert_martino.jpeg" alt="">
+                        </a>
+                        <a href="" class="col s3">
+                            <img src="img/gallery/pioneer/old_micki.jpg" alt="">
+                        </a>
+                        <a href="" class="col s3">
+                            <img src="img/gallery/pioneer/skah_shah.jpg" alt="">
+                        </a>
+                        <a href="" class="col s3">
+                            <img src="img/gallery/pioneer/lesfreresdejean14.jpg" alt="">
+                        </a>
+                    </p>
+                </div>
+
+                <div class="row">
+                    <p>
+                        <a href="" class="col s3">
+                            <img src="img/gallery/pioneer/miniallstars06.jpg" alt="">
+                        </a>
+                        <a href="" class="col s3">
+                            <img src="img/gallery/pioneer/septan.jpg" alt="">
+                        </a>
+                        <a href="" class="col s3">
+                            <img src="img/gallery/pioneer/DIGITAL_EXPRESS_Invasion.jpg" alt="">
+                        </a>
+                        <a href="" class="col s3">
+                            <img src="img/gallery/pioneer/bossa_combo_again.jpg" alt="">
+                        </a>
+                    </p>
+                </div>
+                <div class="row">
+                    <p>
+                        <a href="" class="col s3">
+                            <img src="img/gallery/pioneer/phantoms.jpg" alt="">
+                        </a>
+                        <a href="" class="col s3">
+                            <img src="img/gallery/pioneer/RGPOO-Tropicana-Posterfinal-CD2015.jpg" alt="">
+                        </a>
+                        <a href="" class="col s3">
+                            <img src="img/gallery/pioneer/Taboo.jpg" alt="">
+                        </a>
+                        <a href="" class="col s3">
+                            <img src="img/gallery/pioneer/12-46-00-s-l300.jpg" alt="">
+                        </a>
+                    </p>
+                </div>
+        
             </div>
         </section>
+
+        <aside id="side-menu" class="side-nav">
+            <a href="#" class="btn-close hide-on-extra-large-only" onclick="closeSlideMenu()">&times;</a>
+            <a href="#">Composers</a>
+            <a href="#">Female Famous</a>
+            <a href="#">Animateur</a>
+            <a href="#">Movie Actors</a>
+            <a href="#">Legends/Icons</a>
+            <a href="#">Bolero Musician</a>
+            <a href="#">Keyboardist</a>
+            <a href="#">Guitarist</a>
+            <a href="#">Batè</a>
+            <a href="#">Saxophonist</a>
+            <a href="#">Tambourine</a>
+            <a href="#">Comedien </a>
+            <a href="#">Yayad (DJ & Remix)</a>
+            <a href="#">Radio & TV</a>
+            <a href="#">Rappers Kreyol</a>
+            <a href="#">Broadcasting</a>
+        </aside>
     </main>
     <footer class="page-footer black">
-            <div class="footer-link">
-                <a href="#">contakte</a>
-                <a href="">feedback</a>
-                <a href="">sèvis</a>
-                <a href="">politik nou</a>
-                <a href="">tèm ak condisyon</a>
+        <div class="footer-link">
+            <a href="#">contact us</a>
+            <a href="">feedback/support</a>
+            <a href="">services</a>
+            <a href="">politics</a>
+            <a href="">terms and conditions</a>
+        </div>
+        <div class="footer-copyright">
+            <div class="container center">
+                @copyright: <span class="copyright-date">2019</span>
             </div>
-            <div class="footer-copyright">
-                <div class="container center">
-                    @copyright: <span class="copyright-date">2019</span>
-                </div>
-            </div>
-        </footer>
-        <script src="assets/lib/materialize/js/materialize.min.js"></script>
-        <script src="js/index.js"></script>
+        </div>
+    </footer>
+    <script src="assets/lib/materialize/js/materialize.min.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
