--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="description" content="haitan music industry biology and biograpy, get info artist">
     <meta name="author" content="duperweb">
     <meta name="keywords" content="hmi, haitian music industry, biography, haitan music history, artist ">
-    <title>HMIBIO: Haitian Media Industry Biology</title>
+    <title>HMIBIO: Haitian Media Industry Biography</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Materialize+Icons">
     <link rel="stylesheet" href="assets/lib/materialize/css/materialize.min.css" />
     <link rel="stylesheet" href="css/index.css">
@@ -26,7 +26,7 @@
 <body>
     <header class="header-page">
         <div class="social-contact">
-            <span class="open-slide hide-on-large-only">
+            <span class="open-slide hide-on-extra-large-only">
                 <a onclick="openSlideMenu()">
                     <svg width="30" height="30">
                         <path d="M0,5 30,5" stroke="#fff" stroke-width="5" />
@@ -65,7 +65,12 @@
                 <a href="buymusic.html" title="itunes , amazon , google mizik">buy it now</a>
                 <a href="support.html">donate</a>
                 <div class="landing">
-                    Haitian Media Industry Biology
+                    <span class="red-text">H</span> 
+                    <span >M</span> 
+                    <span class="">I</span>
+                    <span class="red-text">B</span> 
+                    <span class="">I</span>
+                    <span class="">O</span>
                 </div>
             </div>
         </div>
@@ -80,10 +85,10 @@
                 </form>
             </div>
         </nav>
-
     </header>
     <main id="main-content-container">
-        <!-- THIS SECTION WILL BE WHEN SOMEONE SEARCH FOR SOMETHNG , IT WILL SHOW 
+        <!-- 
+        THIS SECTION WILL BE WHEN SOMEONE SEARCH FOR SOMETHNG , IT WILL SHOW 
         THE INFORMATION OF THE PERSON REQUESTED. BECAUSE THERE WILL BE RANDOM
         SECTION WITH ARTIST , OF THE MOMENT, PERSON OF THE MOMENT IT SHOULD BE
         RELATED TO MUSIC. AND ALSO A MUSIC/ARTIST/ALBUM/ OF THE MOMENT ,
@@ -270,13 +275,13 @@
                         <a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         </a>
                     </div>
-                    <div class=" col s4">
+                    <div class="col s4">
                         <span>Rigolo</span>
                         <img src="img/gallery/animateur/Junior-Rigolo_web.jpg" alt="">
                         <a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         </a>
                     </div>
-                    <div class=" col s4">
+                    <div class="col s4">
                         <span>Guy wewe</span>
                         <img src="img/gallery/animateur/Guy_Wewe_1.jpg" alt="">
                         <a href="">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -285,31 +290,33 @@
                 </div>
             </div>
         </section>
-
         <aside id="side-menu" class="side-nav">
-            <a href="#" class="btn-close hide-on-large-only" onclick="closeSlideMenu()">&times;</a>
-            <a href="">Composers</a>
-            <a href="">Female Famous</a>
-            <a href="">Animateur</a>
-            <a href="">Movie Actors</a>
-            <a href="">Legends/Icons</a>
-            <a href="">Bolero Musician</a>
-            <a href="">Keyboardist</a>
-            <a href="">Guitarist</a>
-            <a href="">Batè</a>
-            <a href="">Saxophonist</a>
-            <a href="">Tambourine</a>
-            <a href="">Comedien </a>
-            <a href="">Rappers Kreyol</a>
+            <a href="#" class="btn-close hide-on-extra-large-only" onclick="closeSlideMenu()">&times;</a>
+            <a href="#">Composers</a>
+            <a href="#">Female Famous</a>
+            <a href="#">Animateur</a>
+            <a href="#">Movie Actors</a>
+            <a href="#">Legends/Icons</a>
+            <a href="#">Bolero Musician</a>
+            <a href="#">Keyboardist</a>
+            <a href="#">Guitarist</a>
+            <a href="#">Batè</a>
+            <a href="#">Saxophonist</a>
+            <a href="#">Tambourine</a>
+            <a href="#">Comedien </a>
+            <a href="#">Yayad (DJ & Remix)</a>
+            <a href="#">Rappers Kreyol</a>
+            <a href="#">Radio & TV</a>
+            <a href="#">Broadcasting</a>
         </aside>
     </main>
     <footer class="page-footer black">
         <div class="footer-link">
-            <a href="#">contakte</a>
-            <a href="">feedback</a>
-            <a href="">sèvis</a>
-            <a href="">politik nou</a>
-            <a href="">tèm ak condisyon</a>
+            <a href="#">contact us</a>
+            <a href="">feedback/support</a>
+            <a href="">services</a>
+            <a href="">politics</a>
+            <a href="">terms and conditions</a>
         </div>
         <div class="footer-copyright">
             <div class="container center">
