--- a/login.html
+++ b/login.html
@@ -13,16 +13,16 @@
 <body>
     <header class="header-pages">
         <div class="social-contact">
-            <a href="http://www.youtube.com/hmibio">
+            <a href="http://www.youtube.com/hmibio" target="_blank">
                 <img src="img/social/youtube.png" alt="">
             </a>
-            <a href="http://www.instagram.com/hmibio">
+            <a href="http://www.instagram.com/hmibio" target="_blank">
                 <img src="img/social/insta-icon.jpeg" alt="">
             </a>
-            <a href="http://www.facebook.com/hmibio">
+            <a href="http://www.facebook.com/hmibio" target="_blank">
                 <img src="img/social/fb.png" alt="">
             </a>
-            <a href="http://www.twitter.com/hmibio">
+            <a href="http://www.twitter.com/hmibio" target="_blank">
                 <img src="img/social/twitter-icon.png" alt="">
             </a>
             <a href="http://www.facebook.com/hmibio">
